[metadata]
name = BloonsMacro
version = 0.0.1
author = Jason Pitchford
author_email = devoidsloth@gmail.com
description = Makes Bloons Macros Easy!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Jpizza99/Bloons_Macros
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True